# TabAgentServer

./: .gitignore  .gitmodules  ENV_TEMPLATE.txt  MIA_VISION.md  QUICK_START.md  README.md  README_WINDOWS.md  RUST_MIGRATION_PLAN.md  Rust Embedded Database plan.md  TAURI_INTEGRATION_PLAN.md  TAURI_SETUP.md  TESTING.md  cli.py  com.tabagent.host.json  config.py  native_host.py  package-lock.json  package.json  pytest.ini  requirements.txt  run_tests.ps1  run_tests.sh  setup_dev_token.example.py  setup_libclang.ps1  test_rust_bindings.py
Rust/: .gitignore  ARCHITECTURE.md  Cargo.toml  MIGRATION_PLAN.md  ORCHESTRATION_FLOW.md  README.md  Rust-Architecture-Guidelines.md  run-server.bat  run-server.ps1  rust-toolchain.toml  voilationreport.md
Rust/.cargo/: config.toml
Rust/api/: Cargo.toml  README.md  TODO.md
Rust/api/src/: config.rs  error.rs  lib.rs  route_trait.rs  router.rs  traits.rs
Rust/api/tests/: integration_tests.rs
Rust/appstate/: Cargo.toml  README.md  TODO.md
Rust/appstate/src/: hf_auth.rs  lib.rs  orchestrator.rs  python_bridge.rs  state.rs
Rust/common/: Cargo.toml  README.md  TODO.md  build.rs
Rust/common/src/: actions.rs  backend.rs  errors.rs  grpc.rs  hardware_constants.rs  inference_settings.rs  lib.rs  logging.rs  ml_client.rs  models.rs  platform.rs  python_process_manager.rs  routing.rs
Rust/common/tests/: backend_integration_tests.rs  common_tests.rs  platform_tests.rs  routing_integration_tests.rs
Rust/db-bindings/: Cargo.toml  TODO.md
Rust/db-bindings/src/: db.rs  lib.rs  query_api.rs  types.rs  weaver_api.rs
Rust/db-bindings/tests/: README.md  db_tests.rs
Rust/docs/: DATABASE_FOUNDATION_PLAN.md  KnowledgeWeaver.md  TODO.md  mia_memory.md
Rust/embedding/: Cargo.toml
Rust/embedding/src/: lib.rs
Rust/execution-providers/: Cargo.toml  README.md
Rust/execution-providers/src/: acl.rs  armnn.rs  azure.rs  cann.rs  constants.rs  coreml.rs  cpu.rs  cuda.rs  directml.rs  error.rs  lib.rs  migraphx.rs  nnapi.rs  nv.rs  onednn.rs  openvino.rs  qnn.rs  rknpu.rs  rocm.rs  tensorrt.rs  tvm.rs  vitis.rs  wasm.rs  webgpu.rs  webnn.rs  xnnpack.rs
Rust/execution-providers/tests/: provider_tests.rs
Rust/gguf-loader/: Cargo.toml  README.md  TODO.md
Rust/gguf-loader/src/: context.rs  ffi.rs  lib.rs  model.rs  variant.rs
Rust/gguf-loader/tests/: test_models.rs  variant_selection_tests.rs
Rust/hardware/: Cargo.toml  README.md  TODO.md
Rust/hardware/src/: constants.rs  gpu.rs  lib.rs  memory.rs  platform_linux.rs  platform_macos.rs  platform_windows.rs  recommendations.rs
Rust/hardware/tests/: hardware_tests.rs
Rust/indexing/: ARCHITECTURE.md  COMPREHENSIVE_PLAN.md  Cargo.toml  README.md  build.rs  error_output.txt
Rust/indexing/benches/: warm_vs_cold_benchmark.rs
Rust/indexing/src/: LOCK_FREE_CONCURRENCY.md  adaptive_concurrency.rs  adj.rs  algorithms.rs  batch.rs  benchmark.rs  builders.rs  caching.rs  community_detection.rs  config.rs  data.rs  distance_metrics.rs  docs.rs  errors.rs  flow_algorithms.rs  graph.rs  graph_types.rs  htm.rs  hybrid.rs  iter_format.rs  iterators.rs  lib.rs  lock_free.rs  lock_free_benchmark.rs  lock_free_btree.rs  lock_free_hot_graph.rs  lock_free_hot_vector.rs  lock_free_stress_tests.rs  macros.rs  memory_mapping.rs  optimized_graph.rs  payload_index.rs  persistence.rs  prelude.rs  segment.rs  simd_distance_metrics.rs  structural.rs  unionfind.rs  vector.rs  vector_storage.rs
Rust/indexing/tests/: TEST_REPORT_2025-11-05_17-26-01.md  TEST_REPORT_2025-11-05_19-39-31.md  graph_tests.rs  index_manager_tests.rs  mod.rs  structural_tests.rs  test.ps1  vector_tests.rs
Rust/knowledge-graph/: Cargo.toml
Rust/knowledge-graph/src/: lib.rs
Rust/libmdbx-test/: Cargo.toml  build.rs
Rust/libmdbx-test/src/: lib.rs  zero_copy_ffi.rs
Rust/mcp/: Cargo.toml  README.md
Rust/mcp/benches/: log_performance.rs
Rust/mdbx-base/: Cargo.toml  README.md  debug_error_codes.rs  test-mdbx-base.ps1
Rust/mia-storage/: Cargo.toml
Rust/model-bindings/: Cargo.toml  README.md  pyproject.toml
Rust/model-cache/: Cargo.toml  README.md
Rust/model-cache-bindings/: Cargo.toml  README.md
Rust/native-handler/: Cargo.toml  MODEL_PIPELINE_COMPLETE.md  README.md  pyproject.toml
Rust/native-messaging/: Cargo.toml  README.md  TODO.md  libchat.rlib
Rust/onnx-loader/: Cargo.toml  README.md  build.rs
Rust/pipeline/: Cargo.toml  README.md
Rust/protos/: database.proto  ml_inference.proto
Rust/python-ml-bridge/: Cargo.toml  README.md  TODO.md
Rust/query/: Cargo.toml  README.md
Rust/server/: Cargo.toml  GRPC_ARCHITECTURE.md  README.md  TODO.md
Rust/storage/: Cargo.toml  README.md  TODO.md  test.ps1
Rust/task-scheduler/: Cargo.toml  README.md  TODO.md
Rust/tokenization/: Cargo.toml  README.md
Rust/values/: Cargo.toml  README.md  TODO.md
Rust/weaver/: Cargo.toml
Rust/webrtc/: Cargo.toml  README.md  TODO.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: main.rs
storage/embedded-db-rs/: BRUTAL_REALITY_CHECK.md  Cargo.toml  FINAL_REVIEW.md  GAPS_RESOLUTION_FINAL.md  GAPS_STATUS.md  PHASE_4_COMPLETE.md  PYTHON_INTEGRATION.md  README.md  REALITY_CHECK.md  REFERENCE.md  TESTING_GAP_ANALYSIS.md
tabagent-rs/: .gitignore  Cargo.toml
tabagent-rs/bindings/: Cargo.toml
tabagent-rs/common/: README.md
tabagent-rs/db-bindings/: README.md  test_full_system.py  test_platform_paths.py
tabagent-rs/docs/: Q_STUDY_NOTES.md  QueryEngine.md
tabagent-rs/hardware/: Cargo.toml
tabagent-rs/indexing/: README.md
tabagent-rs/ml-bridge/: Cargo.toml  TODO.md
tabagent-rs/model-bindings/: README.md  TODO.md
tabagent-rs/model-cache/: Cargo.toml  README.md  TODO.md  default_models.json
tabagent-rs/model-cache-bindings/: Cargo.toml  README.md  TODO.md  pyproject.toml
tabagent-rs/model-loader/: Cargo.toml  README.md  TODO.md
tabagent-rs/native-handler/: Cargo.toml  MODEL_PIPELINE_COMPLETE.md  README.md  TODO.md  test_model_pipeline.py
tabagent-rs/pipeline/: README.md  TODO.md
tabagent-rs/task-scheduler/: Cargo.toml  README.md
tabagent-rs/weaver/: Cargo.toml  README.md
(+1048 files in other folders)
