[workspace]
resolver = "2"
members = [
    # Core infrastructure
    "common",
    
    # Storage & Database
    "storage",
    "query",
    "indexing",
    "knowledge-graph",
    
    # Knowledge weaving
    "weaver",
    "task-scheduler",
    
    # ML & Model handling
    "python-ml-bridge",        # Python ML models (Rust calls Python)
    "hardware",
    "model-loader",
    "model-cache",
    "pipeline",                # Pipeline interfaces (type-safe)
    
    # Python bindings (Python calls Rust)
    "db-bindings",             # Database bindings
    "model-bindings",          # Model loader bindings
    "model-cache-bindings",    # Model cache bindings
    "native-handler",          # Native messaging handler (GGUF/BitNet)
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["TabAgent Team"]
license = "MIT"
repository = "https://github.com/ocentra/TabAgent"

[workspace.dependencies]
# Shared core dependencies
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
tokio = { version = "1.35", features = ["full"] }

# Database & Storage
sled = "0.34"
petgraph = "0.6"
hashbrown = "0.15"
dashmap = "6.1"

# Graph & Embeddings  
hnsw_rs = "0.3"
qdrant-client = { version = "1.11", features = ["serde"] }

# System info
sysinfo = "0.30"

# FFI & Dynamic loading
libloading = "0.8"

# Python bindings (features added per-crate as needed)
pyo3 = "0.21"

# Async runtime
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
tempfile = "3.8"
num_cpus = "1.16"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# CPU-specific build profiles for distribution
[profile.release-zen2]
inherits = "release"

[profile.release-zen3]
inherits = "release"

[profile.release-zen4]
inherits = "release"

[profile.release-zen5]
inherits = "release"

[profile.release-alderlake]
inherits = "release"

[profile.release-skylake]
inherits = "release"

[profile.release-portable]
inherits = "release"
