[workspace]
resolver = "2"
members = [
    "api",
    "appstate",
    "common",
    "db-bindings",
    "execution-providers",
    "gguf-loader",
    "hardware",
    "indexing",
    "knowledge-graph",
    "model-bindings",
    "model-cache",
    "model-cache-bindings",
    "native-handler",
    "native-messaging",
    "onnx-loader",
    "pipeline",
    "python-ml-bridge",
    "query",
    "server",
    "storage",
    "task-scheduler",
    "tokenization",
    "values",
    "weaver",
    "webrtc",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["TabAgent Team"]
license = "MIT"
repository = "https://github.com/ocentra/TabAgent"

[workspace.dependencies]
# Shared core dependencies
thiserror = "2.0.17"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0.1", features = ["serde"] }
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Database & Storage
sled = "0.34"
petgraph = "0.8.3"
hashbrown = "0.16.0"
dashmap = "6.1"

# Graph & Embeddings  
hnsw_rs = "0.3"
qdrant-client = { version = "1.11", features = ["serde"] }

# System info
sysinfo = "0.37.2"

# FFI & Dynamic loading
libloading = "0.8"

# Python bindings (features added per-crate as needed)
pyo3 = "0.27.1"

# Async runtime
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
tempfile = "3.8"
num_cpus = "1.16"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# CPU-specific build profiles for distribution
[profile.release-zen2]
inherits = "release"

[profile.release-zen3]
inherits = "release"

[profile.release-zen4]
inherits = "release"

[profile.release-zen5]
inherits = "release"

[profile.release-alderlake]
inherits = "release"

[profile.release-skylake]
inherits = "release"

[profile.release-portable]
inherits = "release"

# Override esaxx-rs to use our local version with dynamic CRT (fixes linker error with ort-sys)
[patch.crates-io]
esaxx-rs = { path = "../External/esaxx-rs" }