[workspace]
resolver = "2"
members = [
    "api",
    "appstate",
    "common",
    "execution-providers",
    "gguf-loader",
    "hardware",
    "indexing",
    "knowledge-graph", "libmdbx-test",
    "mcp",
    "mia-storage",
    "model-cache",
    "native-messaging",
    "onnx-loader",
    "pipeline",
    "query",
    "server",
    "storage",
    "task-scheduler",
    "tokenization",
    "values",
    "weaver",
    "webrtc",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["TabAgent Team"]
license = "MIT"
repository = "https://github.com/ocentra/TabAgent"

[workspace.dependencies]
# Shared core dependencies
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
tokio-util = "0.7"

# Database & Storage
petgraph = "0.8.3"
hashbrown = "0.16.0"
dashmap = "6.1"
libmdbx = "0.6.3"
rkyv = { version = "0.8.12", features = ["std"] }
rkyv_derive = "0.8.12"
rkyv_unsigned_varint = "0.3"
bytecheck = "0.8.2"

# Graph & Embeddings  
hnsw_rs = "0.3"
qdrant-client = { version = "1.11", features = ["serde"] }

# System info
sysinfo = "0.37.2"

# FFI & Dynamic loading
libloading = "0.8"

# Async runtime
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }

# gRPC
tonic = "0.14"
prost = "0.14"
tokio-stream = "0.1"

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
tempfile = "3.8"
num_cpus = "1.16"
time = { version = "0.3", features = ["macros"] }
bytes = "1.9"
futures = "0.3"
rand = "0.9.2"
regex = "1.11"
http = "1.1"
toml = "0.9.8"
parking_lot = "0.12"
dirs = "6.0.0"

# HTTP & Web
axum = { version = "0.8.6", features = ["macros"] }
tower = { version = "0.5.2", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.6.6", features = ["fs", "cors", "trace", "compression-full"] }
hyper = { version = "1", features = ["full"] }
webrtc = "0.14.0"
tokio-tungstenite = "0.28.0"

# OpenAPI / Swagger
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }

# Data processing
# PINNED: ndarray 0.16.0 required by ort 2.0.0-rc.10 (0.17.x has breaking changes)
# default-features = false to reduce binary size (std/rayon not needed for ONNX inference)
ndarray = { version = "0.16.0", default-features = false, features = [] }
ordered-float = { version = "5.1.0", features = ["serde"] }

# ONNX Runtime
# PINNED: Using RC version for latest CUDA/TensorRT/DirectML/OpenVINO/CoreML support
# Stable 2.0.0 not released yet, RC.10 is production-ready
ort = { version = "=2.0.0-rc.10", default-features = true, features = ["half", "cuda", "tensorrt", "directml", "openvino", "coreml"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Platform-specific
windows = { version = "0.62.2", features = [] }
winapi = { version = "0.3", features = ["libloaderapi"] }
keyring = { version = "3.2" }

# Testing
criterion = { version = "0.7.0", features = ["html_reports", "async_tokio"] }
env_logger = "0.11"
proptest = "1.6"
tokio-test = "0.4"

# FFI for libmdbx zero-copy
mdbx-sys = "13.8.0"
crc32fast = "1.3"
crc32c = "0.6"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# CPU-specific build profiles for distribution
[profile.release-zen2]
inherits = "release"

[profile.release-zen3]
inherits = "release"

[profile.release-zen4]
inherits = "release"

[profile.release-zen5]
inherits = "release"

[profile.release-alderlake]
inherits = "release"

[profile.release-skylake]
inherits = "release"

[profile.release-portable]
inherits = "release"

# Override esaxx-rs to use our local version with dynamic CRT (fixes linker error with ort-sys)
[patch.crates-io]
esaxx-rs = { path = "../External/esaxx-rs" }
