[package]
name = "tabagent-desktop"
version = "0.1.0"
description = "TabAgent Desktop - AI Workflow Platform"
authors = ["TabAgent Team"]
license = "MIT"
repository = "https://github.com/ocentra/TabAgentServer"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Reference existing Rust crates
api = { path = "../Rust/api" }
storage = { path = "../Rust/storage" }
common = { path = "../Rust/common" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

