[package]
name = "tabagent-api"
version = "0.1.0"
edition = "2021"
authors = ["TabAgent Team"]
description = "HTTP API layer for TabAgent Server using Axum"
license = "MIT"

[lib]
name = "tabagent_api"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
tabagent-values = { path = "../values" }

# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "compression-full"] }
hyper = { version = "1", features = ["full"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"

# OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
utoipa-rapidoc = { version = "6", features = ["axum"] }
utoipa-redoc = { version = "6", features = ["axum"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"

# Utilities
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# Testing
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
axum-test = "18.1.0"
http-body-util = "0.1"
tabagent-api = { path = ".", features = ["test-helpers"] }

[features]
default = []
# Enable for development/testing
dev-tools = []
# Enable test-helpers for integration tests
test-helpers = []

