[package]
name = "tabagent-api"
version = "0.1.0"
edition = "2021"
authors = ["TabAgent Team"]
description = "HTTP API layer for TabAgent Server using Axum"
license = "MIT"

[lib]
name = "tabagent_api"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
tabagent-values = { path = "../values" }
common = { path = "../common" }
appstate = { path = "../appstate" }
tabagent-webrtc = { path = "../webrtc" }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }

# OpenAPI documentation
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
utoipa-rapidoc = { workspace = true }
utoipa-redoc = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
# Testing
tokio-test = { workspace = true }
tower = { workspace = true }
axum-test = "18.1.0"
http-body-util = "0.1"
tabagent-api = { path = ".", features = ["test-helpers"] }

[features]
default = []
# Enable for development/testing
dev-tools = []
# Enable test-helpers for integration tests
test-helpers = []

