[package]
name = "appstate"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core types and traits
common = { path = "../common" }
tabagent-values = { path = "../values" }

# Backend infrastructure
storage = { path = "../storage" }
tabagent-model-cache = { path = "../model-cache" }
tabagent-hardware = { path = "../hardware" }
tabagent-onnx-loader = { path = "../onnx-loader" }
gguf-loader = { path = "../gguf-loader" }

# Async runtime
tokio = { workspace = true, features = ["sync", "macros"] }
tokio-util = { workspace = true }
async-trait = { workspace = true }

# Concurrency
dashmap = { workspace = true }
parking_lot = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
dirs = { workspace = true }
keyring = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

