[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bincode = { workspace = true }
sled = { workspace = true }
time = { version = "0.3", features = ["macros"] }
rand = "0.9.2"
async-trait = { workspace = true }
tabagent-values = { path = "../values" }
anyhow = { workspace = true }
http = "1.0"

[dev-dependencies]
tempfile = "3.8"
tokio = { workspace = true, features = ["rt", "macros"] }
anyhow = { workspace = true }