[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rkyv = { workspace = true }
rkyv_derive = { workspace = true }
time = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
tabagent-values = { path = "../values" }
anyhow = { workspace = true }
http = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio-stream = { workspace = true }
tonic-prost = "0.14"
tokio = { workspace = true, features = ["sync", "time", "process"] }
tracing = { workspace = true }
chrono = { workspace = true }

[build-dependencies]
tonic-prost-build = "0.14" 

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
anyhow = { workspace = true }