[package]
name = "indexing"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
sled = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
rand = "0.9.2"
crossbeam = "0.8"
memmap2 = "0.9"

# HNSW vector index (pure Rust!)
hnsw_rs = "0.3"
petgraph.workspace = true
ordered-float = { version = "5.1.0", features = ["serde"] }

# SIMD support for vector operations
wide = "0.8.1"
safer-ffi = "0.1"

[dev-dependencies]
tempfile = { workspace = true }

[features]
simd = []