[package]
name = "indexing"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
libmdbx = { workspace = true }
mdbx-sys = { workspace = true }
rkyv = { workspace = true }
crc32fast = { workspace = true }
crc32c = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
crossbeam = "0.8"
memmap2 = "0.9"

# HNSW vector index (pure Rust!)
hnsw_rs = { workspace = true }
petgraph.workspace = true
ordered-float = { workspace = true }

# SIMD support for vector operations
wide = "0.8.1"
safer-ffi = "0.1"

[dev-dependencies]
tempfile = { workspace = true }

[features]
simd = []