[package]
name = "indexing"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
storage = { path = "../storage" }
rkyv = { workspace = true }
crc32fast = { workspace = true }
crc32c = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
crossbeam = "0.8"
memmap2 = "0.9"

# HNSW vector index (pure Rust!)
hnsw_rs = { workspace = true }
petgraph.workspace = true
ordered-float = { workspace = true }

# Graph algorithm dependencies (from petgraph/qdrant)
hashbrown = "0.16.0"
fixedbitset = "0.5"
indexmap = "2.6"
itertools = "0.14"

# SIMD support for vector operations
wide = "0.8.1"
safer-ffi = "0.1"

[dev-dependencies]
tempfile = { workspace = true }
criterion = "0.7.0"
mdbx-base = { path = "../mdbx-base" }

[[bench]]
name = "warm_vs_cold_benchmark"
harness = false

[features]
simd = []