[package]
name = "tabagent-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = "2.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Internal crates
common = { path = "../common" }
storage = { path = "../storage" }
tabagent-values = { path = "../values" }
appstate = { path = "../appstate" }

# HTTP server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Collections
dashmap = { workspace = true }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "log_performance"
harness = false
