[package]
name = "mia-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core storage infrastructure
storage = { path = "../storage" }

# Domain models and types
common = { path = "../common" }

# Indexing integration
indexing = { path = "../indexing" }

# Serialization
rkyv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }

# Utilities
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
uuid = { workspace = true }

