[package]
name = "tabagent-model-bindings"
version = "0.1.0"
edition = "2021"

[lib]
name = "tabagent_model"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true, features = ["extension-module"] }
gguf-loader = { path = "../gguf-loader" }
tabagent-hardware = { path = "../hardware" }
serde = { workspace = true }
serde_json = { workspace = true }
num_cpus = { workspace = true }

[build-dependencies]
pyo3-build-config = "0.21"
