[package]
name = "tabagent-model-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
sled = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
reqwest = { version = "0.12.24", features = ["json", "stream"] }
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
bytes = "1.5"
sha2 = "0.10"
chrono = "0.4"

[dev-dependencies]
tempfile = { workspace = true }

