[package]
name = "tabagent-model-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
storage = { path = "../storage" }
libmdbx = { workspace = true }
rkyv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
sha2 = "0.10"
chrono = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

