[package]
name = "tabagent-native-handler"
version = "0.1.0"
edition = "2021"

[lib]
name = "tabagent_native_handler"
crate-type = ["cdylib"]

[dependencies]
# Workspace crates (DRY - reuse existing)
common = { path = "../common" }
storage = { path = "../storage" }
tabagent-model-cache = { path = "../model-cache" }
tabagent-hardware = { path = "../hardware" }
tabagent-onnx-loader = { path = "../onnx-loader" }
tabagent-execution-providers = { path = "../execution-providers" }
tabagent-pipeline = { path = "../pipeline" }

# PyO3 for Python bindings
pyo3 = { workspace = true, features = ["extension-module", "abi3-py39"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
log = "0.4"

# Lazy static initialization
once_cell = "1.19"

[build-dependencies]
pyo3-build-config = "0.27.1"

