[package]
name = "tabagent-native-messaging"
version = "0.1.0"
edition = "2021"
authors = ["TabAgent Team"]
description = "Native messaging host for Chrome extensions - TabAgent Server communication"
license = "MIT"

[[bin]]
name = "tabagent-native-messaging-host"
path = "src/main.rs"

[lib]
name = "tabagent_native_messaging"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies - CRITICAL: Use exact same values crate as API/WebRTC
tabagent-values = { path = "../values" }
appstate = { path = "../appstate" }
common = { path = "../common" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"

# Utilities
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
num_cpus = "1"

# Configuration
clap = { version = "4", features = ["derive"] }
toml = "0.9.8"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
# Testing
tokio-test = "0.4"
proptest = "1"
tempfile = "3"

[features]
default = []
# Enable for development/testing
dev-tools = []