[package]
name = "tabagent-native-messaging"
version = "0.1.0"
edition = "2021"
authors = ["TabAgent Team"]
description = "Native messaging host for Chrome extensions - TabAgent Server communication"
license = "MIT"

[[bin]]
name = "tabagent-native-messaging-host"
path = "src/main.rs"

[lib]
name = "tabagent_native_messaging"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies - CRITICAL: Use exact same values crate as API/WebRTC
tabagent-values = { path = "../values" }
appstate = { path = "../appstate" }
common = { path = "../common" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
num_cpus = { workspace = true }

# Configuration
clap = { workspace = true }
toml = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
# Testing
tokio-test = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
# Enable for development/testing
dev-tools = []