[package]
name = "tabagent-onnx-loader"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "tabagent_onnx_loader"
crate-type = ["rlib"]

[dependencies]
# Workspace crates
common = { path = "../common" }
tabagent-hardware = { path = "../hardware" }
tabagent-tokenization = { path = "../tokenization" }
tabagent-execution-providers = { path = "../execution-providers" }

# ONNX Runtime (matching References/ort)
ort = { version = "=2.0.0-rc.10", default-features = true, features = ["half", "cuda", "tensorrt", "directml", "openvino", "coreml"] }
ndarray = { version = "0.16", default-features = false }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
log = { workspace = true }

# Random number generation (for sampling)
rand = "0.9.2"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tabagent-model-cache = { path = "../model-cache" }
env_logger = "0.11"

