[package]
name = "tabagent-onnx-loader"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "tabagent_onnx_loader"
crate-type = ["rlib"]

[dependencies]
# Workspace crates
common = { path = "../common" }
tabagent-hardware = { path = "../hardware" }
tabagent-tokenization = { path = "../tokenization" }
tabagent-execution-providers = { path = "../execution-providers" }

# ONNX Runtime (matching References/ort)
ort = { workspace = true }
ndarray = { workspace = true, default-features = false }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
log = { workspace = true }

# Random number generation (for sampling)
rand = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tabagent-model-cache = { path = "../model-cache" }
env_logger = { workspace = true }

[features]
default = []
# Hardware acceleration features (match ort crate features)
cuda = []
tensorrt = []
directml = []
coreml = []
rocm = []
openvino = []
