[package]
name = "tabagent-pipeline"
version = "0.1.0"
edition = "2021"

[lib]
name = "tabagent_pipeline"
crate-type = ["rlib"]

[dependencies]
# Composed dependencies (DRY - reuse existing crates!)
tabagent-model-cache = { path = "../model-cache" }  # Detection, download, caching
tabagent-onnx-loader = { path = "../onnx-loader" }  # ONNX Runtime inference

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0.17"
anyhow = "1.0"

# Logging
log = "0.4"

# Async (for model-cache)
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1.0", features = ["full"] }

