[package]
name = "tabagent-pipeline"
version = "0.1.0"
edition = "2021"

[lib]
name = "tabagent_pipeline"
crate-type = ["rlib"]

[dependencies]
# Composed dependencies (DRY - reuse existing crates!)
tabagent-model-cache = { path = "../model-cache" }  # Detection, download, caching
tabagent-onnx-loader = { path = "../onnx-loader" }  # ONNX Runtime inference

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
log = { workspace = true }

# Async (for model-cache)
tokio = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
tokio = { workspace = true }

