[package]
name = "query"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace crates
common = { path = "../common" }
storage = { path = "../storage" }
indexing = { path = "../indexing" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Collections
hashbrown = "0.16.0"

# Graph algorithms (for shortest path)
petgraph = "0.8.3"

[dev-dependencies]
tempfile = "3.8"
